--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Nuestras Redes Sociales</h1>
     <ul class="social-links">
       <li>
-        <a href="https://api.whatsapp.com/message/2B5E6D7J3SCUL1?autoload=1&app_absent=0" target="_blank">
+        <a href="https://api.whatsapp.com/send/?phone=6629488770&text&type=phone_number&app_absent=0" target="_blank">
           <img src="whatsapp.png" alt="WhatsApp Icon" class="social-icon">
           WhatsApp
         </a>
